--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim quiddity's tweaks
 @namespace   StylishThemes
-@version     1.1.08
+@version     1.1.09
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -195,7 +195,18 @@ domain("patchdemo.wmflabs.org") {
   .timeline-wrapper {max-width: none;} */
   .vector-feature-zebra-design-disabled .mw-page-container {margin: 0;}
   
+/* Semi-hide the empty summary for Category Trees */
  .CategoryTreeItem > span[title="Contains 0 subcategories, 0 pages, and 0 files"] {
    opacity: 0.2;
+  }
+
+  /* More obvious multi-change indicators in Enhanced RC (grouped changes) */
+  .mw-enhancedchanges-arrow, .mw-changeslist-groupdiff {
+    background: #e5fde0;
+  }
+  
+  /* Smol the sub-text in Enchanced RC */
+  .mw-rcfilters-ui-highlights-enhanced-nested {
+    font-size: 0.9em;
   }
 }
