--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim quiddity's tweaks
 @namespace   StylishThemes
-@version     1.1.10
+@version     1.1.11
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -254,6 +254,11 @@ https://en.wikipedia.org/wiki/Wikipedia_talk:Manual_of_Style/Accessibility#Anoth
 */
 ul + ul {
   border-top: 2px dashed #ccc;
+}
+  
+/* Hide VE's undo/redo */
+.ve-ui-toolbar-group-history {
+  display:none;
 }
   
 }
