use generic uparrow

--- a/new-vector-whitespace.user.css
+++ b/new-vector-whitespace.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 whitespace and tweaks
 @namespace   StylishThemes
-@version     1.1.07
+@version     1.1.08
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-whitespace.user.css
 @license     CC-BY-SA-4.0
@@ -242,7 +242,7 @@ html {
 }
 #toc-mw-content-text div::after {
   visibility: visible;
-  content: "🠕";
+  content: "↑";
   display: block;
   position: absolute;
   top: 6px;
