--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim quiddity's tweaks
 @namespace   StylishThemes
-@version     1.1.14
+@version     1.1.15
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -202,7 +202,7 @@ domain("patchdemo.wmflabs.org") {
 
 /* More obvious multi-change indicators in Enhanced RC (grouped changes) */
   .mw-enhancedchanges-arrow, .mw-changeslist-groupdiff {
-    background: #bbf2b0;
+    background: #b0f2e8;
   }
 /* Smol the sub-text in Enchanced RC */
   .mw-rcfilters-ui-highlights-enhanced-nested {
@@ -260,7 +260,8 @@ ul + ul {
 .ve-ui-toolbar-group-history {
   display:none;
 }
-  
+
+/* tweak gender indicators */
 #ps-gender-male, 
 #ps-gender-female, 
 #ps-gender-unknown {
@@ -268,7 +269,8 @@ ul + ul {
   user-select: none;
   opacity:50%
 }
-  
+
+/* tweak popups */
 .popupPreview > table {
   width:100%;
 }
