--- a/new-vector-fixed-pagetools.user.css
+++ b/new-vector-fixed-pagetools.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 Fixed Page Toolbar
 @namespace   StylishThemes
-@version     1.0.19
+@version     1.0.20
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-fixed-pagetools.user.css
 @license     CC-BY-SA-4.0
@@ -190,6 +190,8 @@ body:not(.skin-contenttranslation) .ve-ui-toolbar-floating > .oo-ui-toolbar-bar 
   border-right: 1px solid #eaecf0;
   border-top: unset;
   margin-left: -5px;
+  max-width: 50px;
+  max-height: 50px;
 }
 
 /* Replace toolbar text with icons at small widths */
