--- a/new-vector-enhanced.user.css
+++ b/new-vector-enhanced.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
-@name        Wikim V.2022 Fixed Page Toolbar
+@name        Wikim V.2022 Enhanced
 @namespace   StylishThemes
-@version     1.0.01
+@version     1.0.02
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-enhanced.user.css
 @license     CC-BY-SA-4.0
