--- a/new-vector-enhanced.user.css
+++ b/new-vector-enhanced.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 Enhanced
 @namespace   StylishThemes
-@version     1.0.02
+@version     1.0.03
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-enhanced.user.css
 @license     CC-BY-SA-4.0
@@ -318,28 +318,22 @@ html {
 */
 
 /* Fix the jumping TOC upon first appearance when scrolling */
+.vector-feature-zebra-design-disabled.vector-feature-main-menu-pinned-disabled.vector-feature-toc-pinned-clientpref-1 #vector-toc-pinned-container,    
 .vector-feature-zebra-design-disabled.client-js.vector-sticky-header-enabled.vector-feature-toc-pinned-enabled #vector-toc-pinned-container, 
 .client-js.vector-sticky-header-enabled.vector-feature-toc-pinned-enabled #vector-toc-pinned-container,
 .vector-feature-toc-pinned-enabled #vector-toc-pinned-container {
   top: 55px !important;
 }
-.vector-feature-page-tools-enabled #vector-toc-pinned-container .vector-toc {
+/* .vector-feature-page-tools-enabled #vector-toc-pinned-container .vector-toc {
   padding-top: 0 !important;
-}
-.vector-feature-page-tools-enabled.vector-feature-main-menu-pinned-disabled.vector-feature-toc-pinned-enabled #vector-toc-pinned-container, .vector-feature-toc-pinned-enabled #vector-toc-pinned-container, .vector-feature-main-menu-pinned-disabled.vector-feature-toc-pinned-enabled #vector-toc-pinned-container {
-  margin-top: 0 !important;
-}
+} */
 #mw-panel-toc {
-  margin-top: -40px
+  margin-top: -40px !important;
 }
 
-/* ToC other?? */
+/* ToC whitespace reduction */
 .vector-toc {
   padding: 0 5px !important;
-}
-.vector-toc-enabled .mw-sidebar, 
-.vector-toc-enabled .sidebar-toc {
-  width: 14em !important;
 }
 /* ???
 .vector-toc-contents {
